// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog component opens the popover once trigger is clicked 1`] = `
@media  {
  .c-fDzwZw {
    align-items: center;
    -webkit-appearance: none;
    appearance: none;
    background: white;
    border: unset;
    border-radius: var(--radii-0);
    box-sizing: border-box;
    cursor: pointer;
    display: flex;
    justify-content: center;
    padding: unset;
    transition: all 100ms ease-out;
  }

  .c-dbrbZt {
    display: inline-block;
    fill: none;
    stroke: currentcolor;
    stroke-linecap: round;
    stroke-linejoin: round;
    vertical-align: middle;
  }

  .c-hVoQtf {
    background-color: var(--colors-tonal500);
    border-radius: var(--radii-0);
    box-shadow: var(--shadows-0);
    color: white;
    font-family: var(--fonts-body);
    font-size: var(--fontSizes-sm);
    line-height: 1.5;
    white-space: normal;
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    padding-top: var(--space-2);
    padding-bottom: var(--space-2);
    z-index: 10;
  }

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf {
      animation-duration: 75ms;
      animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
      will-change: transform, opacity;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="top"] {
      animation-name: k-ftcNPK;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="right"] {
      animation-name: k-hbaHED;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="bottom"] {
      animation-name: k-daNevH;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="left"] {
      animation-name: k-fvyGIa;
    }
}

  .c-bnQNAg {
    background: white;
    border-radius: var(--radii-1);
    box-shadow: var(--shadows-3);
    box-sizing: border-box;
    left: 50%;
    max-width: 90vw;
    max-height: 90vh;
    overflow-y: auto;
    padding: var(--space-5);
    position: fixed;
    top: 50%;
    transform: translate3d(-50%, -50%, 0);
    z-index: 1147483646;
  }

  .c-bnQNAg:focus {
    outline: none;
  }

@media (prefers-reduced-motion: no-preference) {
    .c-bnQNAg[data-state="open"] {
      animation: k-iaWRFC 550ms cubic-bezier(0.22, 1, 0.36, 1);
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-bnQNAg[data-state="closed"] {
      animation: k-gturUW 550ms cubic-bezier(0.22, 1, 0.36, 1);
    }
}

  .c-fYlVmN {
    background-color: var(--colors-alpha600);
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    position: fixed;
    overflow-y: auto;
    z-index: 1147483646;
  }

@media (prefers-reduced-motion: no-preference) {
    .c-fYlVmN[data-state="open"] {
      animation: k-eyOShd 250ms ease-out;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-fYlVmN[data-state="closed"] {
      animation: k-bHbNKp 550ms ease-out;
    }
}

  .c-kfLCww {
    fill: var(--colors-tonal500);
  }

  [data-align="end"] .c-kfLCww {
    margin-right: var(--space-2);
  }

  [data-align="start"] .c-kfLCww {
    margin-left: var(--space-2);
  }
}

@media  {
  .c-fDzwZw-PrXKS-size-md {
    height: var(--sizes-4);
    width: var(--sizes-4);
  }

  .c-dbrbZt-dMrjnF-size-md {
    height: var(--sizes-2);
    width: var(--sizes-2);
    stroke-width: 1.75;
  }

  .c-hVoQtf-gWQnqe-size-md {
    max-width: 250px;
  }

  .c-bnQNAg-lgqbzh-size-sm {
    width: 480px;
  }
}

@media  {
  .c-fDzwZw-otpKd-cv {
    background: transparent;
    color: var(--colors-tonal300);
  }

  .c-fDzwZw-otpKd-cv:not(:disabled):hover,
  .c-fDzwZw-otpKd-cv:not(:disabled):focus {
    color: var(--colors-primaryMid);
  }

  .c-fDzwZw-otpKd-cv:not(:disabled):active {
    color: var(--colors-primaryDark);
  }

  .c-fDzwZw-otpKd-cv[disabled] {
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }
}

@media  {
  .c-fDzwZw-ikHqHwu-css {
    position: absolute;
    right: var(--space-4);
    top: var(--space-4);
  }
}

<div
  aria-describedby="radix-5"
  aria-label="Dialog"
  aria-labelledby="radix-4"
  class="c-bnQNAg c-bnQNAg-lgqbzh-size-sm"
  data-state="open"
  id="radix-3"
  role="dialog"
  style="pointer-events: auto;"
  tabindex="-1"
>
  <button
    aria-describedby="radix-9"
    aria-label="Close dialog"
    class="c-fDzwZw c-fDzwZw-PrXKS-size-md c-fDzwZw-otpKd-cv c-fDzwZw-ikHqHwu-css c-PJLV"
    data-state="instant-open"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="c-dbrbZt c-dbrbZt-dMrjnF-size-md c-dbrbZt-iPJLV-css"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m6.343 6.343 11.314 11.314m-11.314 0L17.657 6.343"
      />
    </svg>
  </button>
  <div
    data-radix-popper-content-wrapper=""
    style="position: fixed; left: 0px; top: 0px; transform: translate3d(0, -200%, 0); min-width: max-content;"
  >
    <div
      class="c-hVoQtf c-hVoQtf-gWQnqe-size-md"
      data-align="center"
      data-side="top"
      data-state="instant-open"
      style="pointer-events: auto; --radix-tooltip-content-transform-origin: var(--radix-popper-transform-origin); animation: none;"
    >
      Close dialog
      <span
        style="position: absolute; bottom: 0px; transform: translateY(100%); visibility: hidden;"
      >
        <svg
          class="c-kfLCww"
          height="5"
          preserveAspectRatio="none"
          style="display: block;"
          viewBox="0 0 30 10"
          width="10"
        >
          <polygon
            points="0,0 30,0 15,10"
          />
        </svg>
      </span>
      <span
        id="radix-9"
        role="tooltip"
        style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
      >
        Close dialog
      </span>
    </div>
  </div>
  CONTENT
</div>
`;

exports[`Dialog component renders the trigger with the popover hidden by default 1`] = `
<div>
  <button
    aria-controls="radix-0"
    aria-expanded="false"
    aria-haspopup="dialog"
    data-state="closed"
    type="button"
  >
    TRIGGER
  </button>
</div>
`;

exports[`Dialog component with custom background renders 1`] = `
@media  {
  .c-fDzwZw {
    align-items: center;
    -webkit-appearance: none;
    appearance: none;
    background: white;
    border: unset;
    border-radius: var(--radii-0);
    box-sizing: border-box;
    cursor: pointer;
    display: flex;
    justify-content: center;
    padding: unset;
    transition: all 100ms ease-out;
  }

  .c-dbrbZt {
    display: inline-block;
    fill: none;
    stroke: currentcolor;
    stroke-linecap: round;
    stroke-linejoin: round;
    vertical-align: middle;
  }

  .c-hVoQtf {
    background-color: var(--colors-tonal500);
    border-radius: var(--radii-0);
    box-shadow: var(--shadows-0);
    color: white;
    font-family: var(--fonts-body);
    font-size: var(--fontSizes-sm);
    line-height: 1.5;
    white-space: normal;
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    padding-top: var(--space-2);
    padding-bottom: var(--space-2);
    z-index: 10;
  }

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf {
      animation-duration: 75ms;
      animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
      will-change: transform, opacity;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="top"] {
      animation-name: k-ftcNPK;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="right"] {
      animation-name: k-hbaHED;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="bottom"] {
      animation-name: k-daNevH;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="left"] {
      animation-name: k-fvyGIa;
    }
}

  .c-bnQNAg {
    background: white;
    border-radius: var(--radii-1);
    box-shadow: var(--shadows-3);
    box-sizing: border-box;
    left: 50%;
    max-width: 90vw;
    max-height: 90vh;
    overflow-y: auto;
    padding: var(--space-5);
    position: fixed;
    top: 50%;
    transform: translate3d(-50%, -50%, 0);
    z-index: 1147483646;
  }

  .c-bnQNAg:focus {
    outline: none;
  }

@media (prefers-reduced-motion: no-preference) {
    .c-bnQNAg[data-state="open"] {
      animation: k-iaWRFC 550ms cubic-bezier(0.22, 1, 0.36, 1);
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-bnQNAg[data-state="closed"] {
      animation: k-gturUW 550ms cubic-bezier(0.22, 1, 0.36, 1);
    }
}

  .c-fYlVmN {
    background-color: var(--colors-alpha600);
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    position: fixed;
    overflow-y: auto;
    z-index: 1147483646;
  }

@media (prefers-reduced-motion: no-preference) {
    .c-fYlVmN[data-state="open"] {
      animation: k-eyOShd 250ms ease-out;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-fYlVmN[data-state="closed"] {
      animation: k-bHbNKp 550ms ease-out;
    }
}

  .c-kfLCww {
    fill: var(--colors-tonal500);
  }

  [data-align="end"] .c-kfLCww {
    margin-right: var(--space-2);
  }

  [data-align="start"] .c-kfLCww {
    margin-left: var(--space-2);
  }

  .c-kNieLL {
    width: 100vw;
    height: 100vh;
  }
}

@media  {
  .c-fDzwZw-PrXKS-size-md {
    height: var(--sizes-4);
    width: var(--sizes-4);
  }

  .c-dbrbZt-dMrjnF-size-md {
    height: var(--sizes-2);
    width: var(--sizes-2);
    stroke-width: 1.75;
  }

  .c-hVoQtf-gWQnqe-size-md {
    max-width: 250px;
  }

  .c-bnQNAg-lgqbzh-size-sm {
    width: 480px;
  }
}

@media  {
  .c-fDzwZw-otpKd-cv {
    background: transparent;
    color: var(--colors-tonal300);
  }

  .c-fDzwZw-otpKd-cv:not(:disabled):hover,
  .c-fDzwZw-otpKd-cv:not(:disabled):focus {
    color: var(--colors-primaryMid);
  }

  .c-fDzwZw-otpKd-cv:not(:disabled):active {
    color: var(--colors-primaryDark);
  }

  .c-fDzwZw-otpKd-cv[disabled] {
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }
}

@media  {
  .c-fDzwZw-ikHqHwu-css {
    position: absolute;
    right: var(--space-4);
    top: var(--space-4);
  }
}

<div
  class="c-fYlVmN"
  data-state="open"
  id="modal_overlay"
  style="pointer-events: auto;"
>
  <div
    aria-hidden="true"
    class="c-PJLV c-kNieLL"
    data-aria-hidden="true"
  >
    CUSTOM BACKGROUND
  </div>
  <div
    aria-describedby="radix-22"
    aria-label="Dialog"
    aria-labelledby="radix-21"
    class="c-bnQNAg c-bnQNAg-lgqbzh-size-sm"
    data-state="open"
    id="radix-20"
    role="dialog"
    style="pointer-events: auto;"
    tabindex="-1"
  >
    <button
      aria-describedby="radix-23"
      aria-label="Close dialog"
      class="c-fDzwZw c-fDzwZw-PrXKS-size-md c-fDzwZw-otpKd-cv c-fDzwZw-ikHqHwu-css c-PJLV"
      data-state="instant-open"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="c-dbrbZt c-dbrbZt-dMrjnF-size-md c-dbrbZt-iPJLV-css"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m6.343 6.343 11.314 11.314m-11.314 0L17.657 6.343"
        />
      </svg>
    </button>
    <div
      data-radix-popper-content-wrapper=""
      style="position: fixed; left: 0px; top: 0px; transform: translate3d(0, -200%, 0); min-width: max-content;"
    >
      <div
        class="c-hVoQtf c-hVoQtf-gWQnqe-size-md"
        data-align="center"
        data-side="top"
        data-state="instant-open"
        style="pointer-events: auto; --radix-tooltip-content-transform-origin: var(--radix-popper-transform-origin); animation: none;"
      >
        Close dialog
        <span
          style="position: absolute; bottom: 0px; transform: translateY(100%); visibility: hidden;"
        >
          <svg
            class="c-kfLCww"
            height="5"
            preserveAspectRatio="none"
            style="display: block;"
            viewBox="0 0 30 10"
            width="10"
          >
            <polygon
              points="0,0 30,0 15,10"
            />
          </svg>
        </span>
        <span
          id="radix-23"
          role="tooltip"
          style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
        >
          Close dialog
        </span>
      </div>
    </div>
    CONTENT
  </div>
</div>
`;

exports[`Dialog component without close button renders 1`] = `
@media  {
  .c-fDzwZw {
    align-items: center;
    -webkit-appearance: none;
    appearance: none;
    background: white;
    border: unset;
    border-radius: var(--radii-0);
    box-sizing: border-box;
    cursor: pointer;
    display: flex;
    justify-content: center;
    padding: unset;
    transition: all 100ms ease-out;
  }

  .c-dbrbZt {
    display: inline-block;
    fill: none;
    stroke: currentcolor;
    stroke-linecap: round;
    stroke-linejoin: round;
    vertical-align: middle;
  }

  .c-hVoQtf {
    background-color: var(--colors-tonal500);
    border-radius: var(--radii-0);
    box-shadow: var(--shadows-0);
    color: white;
    font-family: var(--fonts-body);
    font-size: var(--fontSizes-sm);
    line-height: 1.5;
    white-space: normal;
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    padding-top: var(--space-2);
    padding-bottom: var(--space-2);
    z-index: 10;
  }

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf {
      animation-duration: 75ms;
      animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
      will-change: transform, opacity;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="top"] {
      animation-name: k-ftcNPK;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="right"] {
      animation-name: k-hbaHED;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="bottom"] {
      animation-name: k-daNevH;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-hVoQtf[data-state="delayed-open"][data-side="left"] {
      animation-name: k-fvyGIa;
    }
}

  .c-bnQNAg {
    background: white;
    border-radius: var(--radii-1);
    box-shadow: var(--shadows-3);
    box-sizing: border-box;
    left: 50%;
    max-width: 90vw;
    max-height: 90vh;
    overflow-y: auto;
    padding: var(--space-5);
    position: fixed;
    top: 50%;
    transform: translate3d(-50%, -50%, 0);
    z-index: 1147483646;
  }

  .c-bnQNAg:focus {
    outline: none;
  }

@media (prefers-reduced-motion: no-preference) {
    .c-bnQNAg[data-state="open"] {
      animation: k-iaWRFC 550ms cubic-bezier(0.22, 1, 0.36, 1);
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-bnQNAg[data-state="closed"] {
      animation: k-gturUW 550ms cubic-bezier(0.22, 1, 0.36, 1);
    }
}

  .c-fYlVmN {
    background-color: var(--colors-alpha600);
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    position: fixed;
    overflow-y: auto;
    z-index: 1147483646;
  }

@media (prefers-reduced-motion: no-preference) {
    .c-fYlVmN[data-state="open"] {
      animation: k-eyOShd 250ms ease-out;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-fYlVmN[data-state="closed"] {
      animation: k-bHbNKp 550ms ease-out;
    }
}

  .c-kfLCww {
    fill: var(--colors-tonal500);
  }

  [data-align="end"] .c-kfLCww {
    margin-right: var(--space-2);
  }

  [data-align="start"] .c-kfLCww {
    margin-left: var(--space-2);
  }
}

@media  {
  .c-fDzwZw-PrXKS-size-md {
    height: var(--sizes-4);
    width: var(--sizes-4);
  }

  .c-dbrbZt-dMrjnF-size-md {
    height: var(--sizes-2);
    width: var(--sizes-2);
    stroke-width: 1.75;
  }

  .c-hVoQtf-gWQnqe-size-md {
    max-width: 250px;
  }

  .c-bnQNAg-lgqbzh-size-sm {
    width: 480px;
  }
}

<div
  aria-describedby="radix-19"
  aria-label="Dialog"
  aria-labelledby="radix-18"
  class="c-bnQNAg c-bnQNAg-lgqbzh-size-sm"
  data-state="open"
  id="radix-17"
  role="dialog"
  style="pointer-events: auto;"
  tabindex="-1"
>
  CONTENT
</div>
`;
